tests/machine/x/c/in_operator_extended.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/in_operator_extended.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:88:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   88 |   map_int_bool_put(&_t5, "a", 1);
      |                          ^~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:39:51: note: expected ‘int’ but argument is of type ‘char *’
   39 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:89:11: error: incompatible types when initializing type ‘int’ using type ‘map_int_bool’
   89 |   int m = _t5;
      |           ^~~
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:90:23: error: expected ‘)’ before ‘in’
   90 |   printf("%s\n", (("a" in m)) ? "true" : "false");
      |                   ~   ^~~
      |                       )
/workspace/mochi/tests/machine/x/c/in_operator_extended.c:91:23: error: expected ‘)’ before ‘in’
   91 |   printf("%s\n", (("b" in m)) ? "true" : "false");
      |                   ~   ^~~
      |                       )

   1: #include <stdio.h>
